# physio-buddy

./: .dockerignore  .env.example  .gitignore  DEBUGGING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
docs/: squat-agentic-architecture-plan.md
src/physio_buddy/: __init__.py  api.py  app.py  coaching.py  config.py  dependencies.py  fatigue.py  mediapipe_pose.py  meralion.py  models.py  schemas.py  session_manager.py  store.py  summary.py  vision.py
src/physio_buddy/routers/: audio.py  health.py  integrations.py  sessions.py
src/physio_buddy/static/: app.js  index.html  styles.css
tests/: test_core.py
