[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physio-buddy"
version = "0.2.0"
description = "Multimodal squat coaching MVP core modules"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0.1",
  "numpy>=1.26",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
vision = [
  "mediapipe>=0.10.14",
  "opencv-python-headless>=4.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
